@@ -77,7 +77,7 @@
 extern char 	*CurrentIdent;
 extern extension_descriptor_t extension_descriptor[];
 
-FilterEngine_data_t	*Engine;
+FilterEngine_t *Engine;
 
 /* exported fuctions */
 int check_filter_block(char *filter, master_record_t *flow_record, int expect);
@@ -101,7 +101,7 @@ uint64_t	*block = (uint64_t *)flow_record;
 		printf("Success: Startnode: %i Numblocks: %i Extended: %i Filter: '%s'\n", Engine->StartNode, nblocks(), Engine->Extended, filter);
 	} else {
 		printf("**** FAILED **** Startnode: %i Numblocks: %i Extended: %i Filter: '%s'\n", Engine->StartNode, nblocks(), Engine->Extended, filter);
-		DumpList(Engine);
+		DumpEngine(Engine);
 		printf("Expected: %i, Found: %i\n", expect, ret);
 		printf("Record:\n");
 		for(i=0; i <= (Offset_MR_LAST >> 3); i++) {
