@@ -1,6 +1,6 @@
 /*
- *  Copyright (c) 2009 - 2018, Peter Haag
- *  Copyright (c) 2004 - 2008, SWITCH - Teleinformatikdienste fuer Lehre und Forschung
+ *  Copyright (c) 2009-2020, Peter Haag
+ *  Copyright (c) 2004-2008, SWITCH - Teleinformatikdienste fuer Lehre und Forschung
  *  All rights reserved.
  *  
  *  Redistribution and use in source and binary forms, with or without 
@@ -119,7 +119,7 @@ profile_param_info_t	*profile_param;
 
 static void SetupProfileChannels(char *profile_datadir, char *profile_statdir, profile_param_info_t *profile_param, 
 	int subdir_index, char *filterfile, char *filename, int verify_only, int compress ) {
-FilterEngine_data_t	*engine;
+FilterEngine_t *engine;
 struct 	stat stat_buf;
 char 	*p, *filter, *subdir, *wfile, *ofile, *rrdfile, *source_filter;
 char	path[MAXPATHLEN];
