@@ -41,6 +41,7 @@
 #include <errno.h>
 #include <sys/types.h>
 #include <sys/select.h>
+#include <sys/socket.h>
 #include <arpa/inet.h>
 
 #ifndef SYSLOG_NAMES
