@@ -1,7 +1,6 @@
 /*
- *  Copyright (c) 2014, Peter Haag
- *  Copyright (c) 2009, Peter Haag
- *  Copyright (c) 2004, SWITCH - Teleinformatikdienste fuer Lehre und Forschung
+ *  Copyright (c) 2009-2020, Peter Haag
+ *  Copyright (c) 2004-2008, SWITCH - Teleinformatikdienste fuer Lehre und Forschung
  *  All rights reserved.
  *  
  *  Redistribution and use in source and binary forms, with or without 
@@ -58,7 +57,6 @@
 #include <stdint.h>
 #endif
 
-#include "nf_common.h"
 #include "nffile.h"
 #include "flist.h"
 #include "rbtree.h"
@@ -66,7 +64,6 @@
 #include "nfdump.h"
 #include "nfx.h"
 #include "util.h"
-#include "grammar.h"
 
 #include "nftrack_stat.h"
 #include "nftrack_rrd.h"
@@ -78,7 +75,7 @@
 extern int yydebug;
 
 /* Global Variables */
-FilterEngine_data_t	*Engine;
+FilterEngine_t *Engine;
 int 		byte_mode, packet_mode;
 uint32_t	byte_limit, packet_limit;	// needed for linking purpose only
 
