@@ -1,3 +1,7 @@
+2020-01-26
+- Fix compile error for FreeBSD #203
+- Cleanup header code - add new filter.h - free nfdump.h from dust
+
 2020-01-11
 - Fix bug for IPv6 network cidr representation in raw and cvs output mode.
 
